Closed
Bug 1109972
Opened 11 years ago
Closed 11 years ago
nsHyphenator assumes wrong bool size
Categories
(Core :: Internationalization, defect)
Tracking
()
RESOLVED
FIXED
mozilla37
People
(Reporter: spectre, Assigned: spectre)
References
()
Details
Attachments
(1 file)
|
1014 bytes,
patch
|
dbaron
:
review+
|
Details | Diff | Splinter Review |
See also bug 720350, bug 724453 and bug 724456. Without this fix, hyphenation occurs in random unpredictable (and usually incorrect) locations on systems where sizeof(bool) != sizeof(char) (PowerPC, and possibly others).
| Assignee | ||
Comment 1•11 years ago
|
||
Hopefully correct reviewer ... please advise if not.
Attachment #8534730 -
Flags: review?(VYV03354)
Really jfkthame would be the right reviewer, but I can mark it.
This is a regression from https://hg.mozilla.org/mozilla-central/rev/e7854b4d29ba .
Blocks: 675553
Attachment #8534730 -
Flags: review?(VYV03354) → review+
Comment 4•11 years ago
|
||
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in
before you can comment on or make changes to this bug.
Description
•