Bug 1109972: nsHyphenator should not assume sizeof(bool) == sizeof(char). r=dbaron